--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Vazir:wght@400;500&family=Shabnam:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body>
+<body id="body">
     <header>
         <div class="container">
             <img src="https://www.tipaxco.com/images/logo.png" alt="Logo" class="logo">
+            <button id="themeToggle" class="theme-toggle-btn">🌙</button>
         </div>
     </header>
 
