--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body id="body">
     <header>
         <div class="container">
-            <img src="https://www.tipaxco.com/images/logo.png" alt="Logo" class="logo">
+            <img src="logo.png" alt="Logo" class="logo">
             <button id="themeToggle" class="theme-toggle-btn">🌙</button>
         </div>
     </header>
